[package]
name = "vapoursynth-mpeg2stinx"
version = "0.1.0"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
paste = "1.0.0"
#vapoursynth = { version = "0.3.0", features = ["vapoursynth-api-35"] }
vapoursynth = { git = "https://github.com/shssoichiro/vapoursynth-rs", branch = "fix-color-family", features = ["vapoursynth-api-35"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
